--- a/users/src/app/tabs/tabs.page.html
+++ b/users/src/app/tabs/tabs.page.html
@@ -1,19 +1,19 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1" [ngClass]="{active: navigate =='tab1'}" (click)="getClass('tab1')">
+    <ion-tab-button tab="tab1" href="/tabs/tab1" [ngClass]="{active: this.navigate =='tab1'}" (click)="getClass('tab1')">
       <span>
         <mat-icon>home</mat-icon>
       </span>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2" [ngClass]="{active: navigate =='tab2'}" (click)="getClass('tab2')">
+    <ion-tab-button tab="tab2" href="/tabs/tab2" [ngClass]="{active: this.navigate =='tab2'}" (click)="getClass('tab2')">
       <span>
         <mat-icon>list</mat-icon>
       </span>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3" [ngClass]="{active: navigate =='tab3'}" (click)="getClass('tab3')">
+    <ion-tab-button tab="tab3" href="/tabs/tab3" [ngClass]="{active: this.navigate =='tab3'}" (click)="getClass('tab3')">
       <span>
         <mat-icon>person</mat-icon>
       </span>
